--- a/src/componenets/Landing-Page/LandingPage.css
+++ b/src/componenets/Landing-Page/LandingPage.css
@@ -1,9 +1,10 @@
 header {
   position: relative;
   background-color: black;
-  height: 75vh;
+  height: 100vh;
   min-height: 25rem;
-  width: 100%;
+  margin: 0 !important;
+  width: 100%; 
   overflow: hidden;
 }
 
