--- a/src/componenets/Layout/Layout.css
+++ b/src/componenets/Layout/Layout.css
@@ -9,7 +9,7 @@ body {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
-  /* overflow-y: hidden; */
+  /* overflow-y: scroll; */
 }
 
 /* .container-fluid {
