only cleaning left

--- a/src/componenets/Layout/Layout.css
+++ b/src/componenets/Layout/Layout.css
@@ -3,19 +3,29 @@
   --input-padding-y: .75rem;
 }
 
+html{
+  width: 100%;
+  height: 100%;
+  margin:0;
+  padding:0;
+  overflow: auto
+}
+
 body {
-  background: #007bff4b;
+  /* background: #007bff4b; */
   background: linear-gradient(to right, #0064e644, #33adff38);
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
-  /* overflow-y: scroll; */
+  overflow: auto;
+
+  /* overflow-x: hidden; */
+  background-image: url("https://images.unsplash.com/photo-1516546453174-5e1098a4b4af?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+  padding-bottom: 20px;
 }
 
-/* .container-fluid {
-  margin: 0 !important;
-  padding: 0 !important;
-} */
 
 .card-signin {
   border: 0;
