--- a/src/componenets/Add-vacation/AddVacation.css
+++ b/src/componenets/Add-vacation/AddVacation.css
@@ -18,6 +18,7 @@ input[type=date] {
     border: none;
     padding: -20px;
     outline: none;
+    background: transparent;
 }
 
 input[type=date]:hover {
