--- a/src/componenets/Landing-Page/LandingPage.css
+++ b/src/componenets/Landing-Page/LandingPage.css
@@ -1,10 +1,20 @@
+.container-fluid {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  padding: 0;
+   margin:0;
+   overflow: auto;
+
+}
+
 header {
   position: relative;
   background-color: black;
-  height: 100vh;
+  height: 100%;
   min-height: 25rem;
   margin: 0 !important;
-  width: 100%; 
+  width: 100%;
   overflow: hidden;
 }
 
