--- a/src/componenets/Vacations-page/VacationPage.css
+++ b/src/componenets/Vacations-page/VacationPage.css
@@ -45,7 +45,16 @@
     height: 14rem;
 }
 
+
 .card {
-    min-height: 30rem;
+    background-color: rgba(255, 255, 255, 0.733);
+    height: 35rem;
     margin-bottom: 1rem;
+    border-radius: 1.5rem;
 }
+
+.card-text-description{
+    height: 8rem;
+    overflow-y: auto;
+}
+
